log
Thu 28 Mar 2024 02:13:19 PM UTC: 
 tests:  0|6
total_score: 0/70
8350c47
Thu 28 Mar 2024 02:15:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c06217
Thu 28 Mar 2024 02:16:46 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
6f48b8a
Thu 28 Mar 2024 02:22:44 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
800e4fc
